fix whitespace issue of page

--- a/src/app/components/signup/signup.component.css
+++ b/src/app/components/signup/signup.component.css
@@ -1,3 +1,11 @@
+.center-container {
+  display: flex;
+  align-items: center;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  text-align: center;
+}
+
 .form-signin {
   width: 100%;
   max-width: 330px;
