--- a/src/styles.css
+++ b/src/styles.css
@@ -7,18 +7,8 @@ main,
   height: 100%;
 }
 
-main {
-  background-color: #f5f5f5;
-}
-
-.center-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding-top: 40px;
-  padding-bottom: 40px;
-  background-color: #f5f5f5;
-  text-align: center;
+body {
+  background-color: #f5f5f5 !important;
 }
 
 input.ng-invalid.ng-touched {
